ingresscontrollers/multiplecontrollers/acme-blog-ingress.yaml
# kind: Service
# apiVersion: v1
# metadata:
#   name: acme-blog
#   namespace: blog
# spec:
#   type: ExternalName
#   externalName: acme-blog.acme.svc.cluster.local
#   ports:
#   - port: 80
# ---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acme-blog-ingress
  namespace: acme
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: blog.acme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: acme-blog
          servicePort: 80
